# fullstack-launchpad

./: .env.example  .gitignore  AGENTS.md  CURRENT_PLAN.md  Makefile  README.md  docker-compose.yml
.agents/: AGENTS.md  BEST_PRACTICES.md  ROADMAP.md
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml  ruff.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  dependencies.py  errors.py  routes.py
backend/app/core/: __init__.py  database.py  logging.py  settings.py
backend/app/db/: __init__.py  models.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 0001_create_todo_schema.py
backend/app/modules/: __init__.py
backend/app/modules/system/: __init__.py  router.py  schemas.py
backend/app/modules/todos/: __init__.py  models.py  router.py  schemas.py  service.py
backend/tests/: test_health.py  test_todos.py
frontend/: .dockerignore  Dockerfile  README.md  components.json  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/scripts/: run-playwright-compose.mjs
frontend/src/: App.tsx
frontend/src/app/: app.css  providers.tsx
frontend/src/components/ui/: alert.tsx  combobox.tsx  data-table.tsx
frontend/src/features/todos/api/: create-todo-item.ts  create-todo-list.ts  delete-todo-item.ts  delete-todo-list.ts  get-todo-list-detail.ts  (+4 more)
frontend/src/lib/: api-client.ts  query-client.ts  types.ts  user-session.ts
frontend/src/stores/: useTodoBoardStore.ts
frontend/src/types/: api.ts
frontend/tests/: todo.spec.ts
infra/: README.md
(+10 files in other folders)
