[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "launchpad-backend"
version = "0.1.0"
description = "Todo API built with FastAPI and SQLModel"
readme = "README.md"
authors = [{ name = "Forge Team", email = "dev@example.com" }]
requires-python = ">=3.12,<3.14"
dependencies = [
  "alembic>=1.13.2,<2.0.0",
  "fastapi>=0.115.0,<0.116.0",
  "httpx>=0.27.2,<0.28.0",
  "orjson>=3.10.7,<4.0.0",
  "psycopg[binary]>=3.2.1,<4.0.0",
  "pydantic>=2.8.2,<3.0.0",
  "pydantic-settings>=2.3.4,<3.0.0",
  "python-dotenv>=1.0.1,<2.0.0",
  "sqlalchemy>=2.0.30,<3.0.0",
  "sqlmodel>=0.0.18,<0.1.0",
  "uvicorn[standard]>=0.30.0,<0.31.0",
]

[dependency-groups]
dev = [
  "mypy>=1.10.0,<2.0.0",
  "pytest>=8.3.2,<9.0.0",
  "pytest-asyncio>=0.23.8,<0.24.0",
  "ruff>=0.6.2,<0.7.0",
  "testcontainers[postgres]>=4.8.0,<5.0.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
